--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color:rgb(52, 195, 198);
+   background-color: aquamarine;
+   
    }
    .header{
     position: absolute;
