--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-   background-color: aquamarine;
+   background-color: rgb(161, 210, 194);
    
    }
    .header{
